@@ -1,18 +1,0 @@
-Diffuse is a graphical tool for merging and comparing text files.
-Diffuse is able to compare an arbitrary number of files side-by-side
-and gives users the ability to manually adjust line matching and
-directly edit files.  Diffuse can also retrieve revisions of files
-from Bazaar, CVS, Darcs, Git, Mercurial, Monotone, RCS, Subversion,
-and SVK repositories for comparison and merging.
-
-Some key features of Diffuse:
-- ability to compare and merge an arbitrary number of files
-  side-by-side (n-way merges)
-- line matching can be manually corrected by the user
-- ability to directly edit files
-- syntax highlighting
-- Bazaar, CVS, Darcs, Git, Mercurial, Monotone, Subversion, and
-  SVK support
-- support for UTF-8 encoded unicode
-- unlimited undo
-- easy keyboard navigation
