@@ -1,64 +1,0 @@
-@comment $NetBSD: PLIST,v 1.13 2016/08/11 00:26:12 mef Exp $
-bin/diffuse
-man/cs/man1/diffuse.1
-man/it/man1/diffuse.1
-man/man1/diffuse.1
-man/ru/man1/diffuse.1
-share/applications/diffuse.desktop
-share/diffuse/syntax/bash.syntax
-share/diffuse/syntax/c++.syntax
-share/diffuse/syntax/csh.syntax
-share/diffuse/syntax/csharp.syntax
-share/diffuse/syntax/css.syntax
-share/diffuse/syntax/erlang.syntax
-share/diffuse/syntax/fortran.syntax
-share/diffuse/syntax/gettext.syntax
-share/diffuse/syntax/glsl.syntax
-share/diffuse/syntax/html.syntax
-share/diffuse/syntax/ini.syntax
-share/diffuse/syntax/java.syntax
-share/diffuse/syntax/javascript.syntax
-share/diffuse/syntax/json.syntax
-share/diffuse/syntax/jsp.syntax
-share/diffuse/syntax/makefile.syntax
-share/diffuse/syntax/objective-c++.syntax
-share/diffuse/syntax/octave.syntax
-share/diffuse/syntax/opencl.syntax
-share/diffuse/syntax/pascal.syntax
-share/diffuse/syntax/patch.syntax
-share/diffuse/syntax/perl.syntax
-share/diffuse/syntax/php.syntax
-share/diffuse/syntax/python.syntax
-share/diffuse/syntax/r.syntax
-share/diffuse/syntax/ruby.syntax
-share/diffuse/syntax/sql.syntax
-share/diffuse/syntax/tcl.syntax
-share/diffuse/syntax/vb.syntax
-share/diffuse/syntax/verilog.syntax
-share/diffuse/syntax/vhdl.syntax
-share/diffuse/syntax/xml.syntax
-share/examples/diffuse/diffuserc
-share/gnome/help/diffuse/C/diffuse.xml
-share/gnome/help/diffuse/cs/diffuse.xml
-share/gnome/help/diffuse/it/diffuse.xml
-share/gnome/help/diffuse/ru/diffuse.xml
-share/icons/hicolor/16x16/apps/diffuse.png
-share/icons/hicolor/22x22/apps/diffuse.png
-share/icons/hicolor/24x24/apps/diffuse.png
-share/icons/hicolor/256x256/apps/diffuse.png
-share/icons/hicolor/32x32/apps/diffuse.png
-share/icons/hicolor/48x48/apps/diffuse.png
-share/locale/cs/LC_MESSAGES/diffuse.mo
-share/locale/de/LC_MESSAGES/diffuse.mo
-share/locale/es/LC_MESSAGES/diffuse.mo
-share/locale/it/LC_MESSAGES/diffuse.mo
-share/locale/ja/LC_MESSAGES/diffuse.mo
-share/locale/ko/LC_MESSAGES/diffuse.mo
-share/locale/pl/LC_MESSAGES/diffuse.mo
-share/locale/ru/LC_MESSAGES/diffuse.mo
-share/locale/zh_CN/LC_MESSAGES/diffuse.mo
-share/locale/zh_TW/LC_MESSAGES/diffuse.mo
-share/omf/diffuse/diffuse-C.omf
-share/omf/diffuse/diffuse-cs.omf
-share/omf/diffuse/diffuse-it.omf
-share/omf/diffuse/diffuse-ru.omf
