@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.24328 2024/04/17 12:02:27 wiz Exp $
+$NetBSD: TODO,v 1.24329 2024/04/17 12:05:22 wiz Exp $
 
 Suggested new packages
 ======================
@@ -731,7 +731,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o golem-0.0.6
 	o goocanvas-2.0.2
 	o gossip-0.31
-	o gourmet-0.13.3
 	o gperiodic-3.0.3
 	o gpick-0.3 [wip]
 	o gprolog-1.5.0 [adds arm64 support]
