@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2515 2024/04/17 12:03:30 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2516 2024/04/17 12:05:22 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4169,3 +4169,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated devel/py-faker to 24.9.0 [adam 2024-04-17]
 	Updated net/gtk-vnc to 0.5.2nb66 [wiz 2024-04-17]
 	Removed databases/gourmet [wiz 2024-04-17]
+	Removed devel/diffuse [wiz 2024-04-17]
